2005-01-04 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genIfxJump) fixed inverted skips on CARRY
	* (genIfx) fixed (?) read from uninitialized SPIL_LOC (now assumes CARRY
	  to hold the condition bit)
	* added new version of genCmp (old code available via #define)
	* added new version of genShiftLeft/genShiftRight in a generic
	  way, now supports shifting by negative values
	* (genLeftShiftLiteral, genRightShiftLiteral) use absolute value of
	  shiftCount (expected by genGenericShift)
	* src/pic16/genarith.c (genPlus) added code for adding CARRY+literal
	* src/pic16/pcode.c (pic16_OptimizeJumps) removed annoying statistics
	  dump
	* (pic16_newpCodeOpLit) changed to cast to unsigned char (as e.g. -32766
	  is an invalid literal too...)

2005-01-04 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (aopForSym, genEndFunction): applied some fixes
	from Raphael Neider,
	* src/pic16/pcode.c (pic16_newpCodeOpLit): removed casting to char
	for 8-bit literals. This fixes some literal operands which are sign
	extended to 16-bits ints when instruction needs only 8-bits.

2004-12-31 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/logf.c: added mcs51 assembly version
	* device/lib/expf.c: added mcs51 assembly version
	* device/lib/_logexpf.c: new shared asm code for expf and logf
	* device/include/math.h: add defines for assembly math library
	* device/lib/Makefile.in: build new _logexpf.c
	* device/lib/libfloat.lib: use new _logexpf.c

2004-12-29 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/device.c
	* src/pic/pcode.c : adjusted internal stack and pre-allocated registers for
	  device types which have less than 0x7f registers.

2004-12-29 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/genarith.c : Fixed problem with subtraction where the result would not be updated when borrowing.

2004-12-28 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: only build on supported arch.